--- a/css/popup_ai.css
+++ b/css/popup_ai.css
@@ -79,3 +79,27 @@
 	border: 1px solid #dd949c !important;
 	background-color: #dbc3c3 !important;
 }
+#cont_selectAI{
+    padding-top:20px;
+}
+#cont_selectAI select{
+	display: inline-block;
+	height: 30px;
+	line-height: 30px;
+	margin-right: 13px;
+	margin-top: 10px;
+	margin-left: 6px;
+	border-radius:6px;
+	padding-left:10px;	
+	padding-right:30px;	
+	background-image:url(../img/frGiuB.png);
+	background-size:auto 100%;
+	background-repeat:no-repeat;
+	background-position:right center;
+	background-color:#FFF;
+	appearance:none;
+	-webkit-appearance:none;
+	border:none;
+	box-shadow:0px 0px 3px rgba(0,0,0,0.5);
+	cursor:pointer;
+}
