--- a/css/moduliValutazione.css
+++ b/css/moduliValutazione.css
@@ -408,6 +408,148 @@
 }
 
 
+/* MU e SHU visuale */
+#moduloMUSHUVIS > div{
+	display:inline-block;
+	vertical-align: bottom;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+.sch_Max600 #moduloMUSHUVIS > div{
+	display:block !important;
+}
+#mushuvis_davanti{
+	background-image:url(../img/valutazioni/mushu_davanti.png);
+	background-size: 300px auto;
+	width: 300px;
+	height:451px;
+}
+#mushuvis_dietro{
+	background-image:url(../img/valutazioni/mushu_schiena.png);
+	background-size: 300px auto;
+	width: 300px;
+	height:451px;
+}
+#moduloMUSHUVIS > div > div{
+	display:inline-block;
+	vertical-align: top;
+	width:30px;
+}
+#mushuvis_davanti > div:nth-child(1){
+	margin-left:24px;
+	padding-top: 51px;
+}
+#mushuvis_davanti > div:nth-child(2){
+	margin-left: 79px;
+    padding-top: 101px;
+}
+#mushuvis_davanti > div:nth-child(3){
+	margin-left: 77px;
+    padding-top: 51px;
+}
+
+#mushuvis_dietro > div:nth-child(1){
+	margin-left: 24px;
+}
+#mushuvis_dietro > div:nth-child(2){
+	margin-left: 191px;
+}
+#mushuvis_dietro > div:nth-child(1) > div,
+#mushuvis_dietro > div:nth-child(2) > div{
+    margin-top: 7px;
+}
+
+#moduloMUSHUVIS > div > div > div,
+#moduloMUSHUVIS > div > div > div  > div,
+#moduloMUSHUVIS > div > div > div  > div > div{
+	display:inline-block;
+	/* vertical-align: middle; */
+}
+#moduloMUSHUVIS > div > div > div > div.domandeModuli{
+	margin:0 !important;
+}
+#moduloMUSHUVIS > div > div > div > div.domandeModuli i{
+	display:none;
+}
+#moduloMUSHUVIS > div > div > div  > div  > div select{
+	width: 30px;
+    border: none !important;
+    background-image: url(../img/frGiuB.png) !important;
+    background-size: 19px auto !important;
+    background-position: calc(100% + 4px) calc(100% + 5px) !important;
+    border-radius: 5px !important;
+    background-color: transparent !important;
+    padding: 0 10px 0 20px !important;
+    z-index: 1;
+    position: relative;
+}
+#moduloMUSHUVIS > div > div > div span{
+	position: relative;
+    display: block;
+    z-index: 0;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: -30px;
+	padding-top:1px;
+}
+#moduloMUSHUVIS > div > div > div b{
+	font-weight: normal;
+    font-size: var(--font-11);
+    height: 12px;
+    line-height: 12px;
+    display: block;
+}
+#muLRdx{
+	margin-top:74px;
+}
+#muGBdx{
+	margin-top:10px;
+}
+#muKIdx{
+	margin-top:10px;
+}
+#muSPdx{
+	margin-top:23px;
+}
+#muLIdx{
+	margin-top:11px;
+}
+#muTE{
+	margin-top: 29px;
+    margin-left: -21px;
+}
+#muBL{
+	margin-top: 18px;
+}
+#muHT{
+	margin-top: 26px;
+}
+#muST{
+	margin-top: 53px;
+}
+#muSI{
+	margin-top: 2px;
+    margin-left: 22px;
+}
+#muLRsx{
+	margin-top: 88px;
+}
+#muGBsx{
+	margin-top: 10px;
+}
+#muKIsx{
+	margin-top: 10px;
+}
+#muSPsx{
+	margin-top: 9px;
+}
+#muLIsx{
+	margin-top: 11px;
+}
+
 /* MU e SHU */
 #moduloMUSHU > div{
 	display:inline-block;
@@ -525,9 +667,16 @@
 	border-left: 5px solid #000 !important;
 }
 #mushu_legenda{
-    display: block !important;
 	padding: 15px;
 	opacity:0.6;
+}
+#mushu_legenda,
+#mushu_grafico{
+    display: inline-block !important;
+	vertical-align:top;
+}
+#mushu_grafico{
+	margin:10px;
 }
 #mushu_legenda > div{
 	display: block !important;
