Aggiunti ideogrammi e sigle al 3D

--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -162,20 +162,26 @@ body:not(.smart) #scheda:not(.schLato) .ideogrammaMeridianoChar{
 #p_idgrm.btnSel2{
 	background-image:url(../../img/p_sigle_sel.png) !important;
 }
-.smart #contBtnModello > div #p_contrasto{
+.smart #contBtnModello > div #p_contrasto,
+.smart #contBtnModello > div #p_idgrm{
 	position: fixed;
-    top: 65px;
     left: 3px;
     border-top: none !important;
-    /* background-color: rgba(0, 0, 0, 0.3); */
     border-radius: 6px;
     background-position: center center;
     height: 48px;
     width: 48px !important;
-	background-color: rgba(0, 0, 0, 0.35)
+	background-color: rgba(0, 0, 0, 0.35);
 }
-#contBtnModello.vis .smart #p_contrasto{
+#contBtnModello.vis .smart #p_contrasto,
+#contBtnModello.vis .smart #p_idgrm{
 	left: 10px !important;
+}
+.smart #contBtnModello > div #p_contrasto{
+    top: 65px;
+}
+.smart #contBtnModello > div #p_idgrm{
+    top: 15px;
 }
 .btn_meridiani_cinesi{
 	cursor:default !important;
