--- a/css/popup_purchases.css
+++ b/css/popup_purchases.css
@@ -14,7 +14,7 @@
 }
 #contPurchases{
 	overflow:hidden;
-	background-color:#FFF;
+	background-color:rgba(255,255,255,0.3);
 	padding:20px;
 	height: calc(100% - 40px);
 	overflow-y: auto;
@@ -32,7 +32,8 @@
 	height: 60px;
 }
 #contPurchases div.btn,
-#contPurchases div.ann{
+#contPurchases div.ann,
+#contPurchases div.torna{
 	appearance:none;
 	-webkit-appearance:none;
 	display:inline-block;
@@ -52,6 +53,10 @@
 	background: linear-gradient(to bottom, #1d4eaa 0%,#0a3d96 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1d4eaa', endColorstr='#0a3d96',GradientType=0 );
 }
+#contPurchases div.btn b{
+	font-size:inherit;
+	color:inherit;
+}
 #contPurchases div.ann{
 	color: #000;
 	background: #b0b0b0;
@@ -61,6 +66,17 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#999', endColorstr='#b0b0b0',GradientType=0 );
 	opacity:0.8;
 	margin-right:10px;
+}
+#contPurchases div.torna{
+	color: #000;
+	background-color: #FFF;
+	opacity:0.8;
+	float:left;
+	background-image: url(../img/frSxB.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: left center;
+	padding-left: 35px;
 }
 
 #prList{
@@ -105,7 +121,7 @@
     line-height:32px;
 }
 #prList > div > div.tit{
-    width:calc(100% - 156px);
+    width:calc(100% - 90px);
     text-align:left;
     overflow:hidden;
     text-overflow:ellipsis;
@@ -123,14 +139,7 @@
 	float:left;
 }
 #prList > div:not(.acqOk) > div.tit{
-    width:calc(100% - 142px);
-}
-#prList > div > div.price{
-    width:66px;
-    text-align:right;
-	height:32px;
-	line-height: 32px;
-    padding-right: 10px;
+    width:calc(100% - 76px);
 }
 
 #prList > div > div.buy{
@@ -158,10 +167,18 @@
 }
 
 #titLicenze{
-    height:50px;
+    /*height:50px;
     line-height:40px;
-    font-size:20px;/* var(--font-20-5); */
-    font-weight:bold;
+    font-size:20px;
+    font-weight:bold;*/
+
+	height: 50px;
+    line-height: 40px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFF;
+    margin-top: -57px;
+    display: block;
 }
 #titLicenze img{
 	vertical-align: middle;
@@ -176,9 +193,129 @@
 }
 #copertinaPurchase{
 	background-repeat:no-repeat;
-	background-position:center center;
-	background-size:cover;
-	margin: -20px -20px 20px -20px;
-    height: 204px;
+	background-position:center bottom, center center;
+	background-size:100% 200px, cover;
+	margin: -20px -20px 10px -20px;
+    height: 180px;
 	width:calc(100% + 40px);
+}
+
+#ins_cod_conv{
+	margin-top:5px;
+}
+#ins_cod_conv > div > input{
+	display:inline-block;
+	vertical-align: middle;
+	border-radius:5px;
+	background-color: rgba(0, 0, 0, 0.1);
+	padding:0 10px;
+	height:36px;
+	line-height:28px;
+	text-align:center;
+}
+#ins_cod_conv > div > input::placeholder{
+	color:#AAA;
+	opacity:1;
+	text-align:center;
+}
+#ins_cod_conv.att > div > input{
+	width:calc(100% - 94px);
+}
+#ins_cod_conv:not(.att) > div div{
+	display:none;
+}
+#ins_cod_conv > div div{
+	display:inline-block;
+	vertical-align:middle;
+	color:#FFF;
+	background-color:#333;
+	border-radius:5px;
+	padding:0 10px;
+	height:34px;
+	line-height:34px;
+	margin-top:-4px;
+	width:90px;
+	cursor:pointer;
+}
+#ins_cod_conv > span{
+	display: inline-block;
+    vertical-align: middle;
+    width: calc(100%);
+	padding: 0 0 0 42px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background-color: #ffe4c4;
+    border-radius: 4px;
+    height: 34px;
+    line-height: 34px;
+	background-image: url(../img/ico_conv.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+	box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+#ins_cod_conv > span > span{
+	display:inline-block;
+	vertical-align:middle;
+	float:right;
+	cursor:pointer;
+	width:34px;
+	height:34px;
+	line-height:34px;
+	background-image: url(../img/chMenuB.png);
+	background-repeat: no-repeat;
+	background-size: auto 20px;
+	background-position: calc(100% - 5px) center;
+}
+#label_prezzo_conv{
+	padding-bottom:6px;
+	background-image: url(../img/ico_conv.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 36px;
+	text-align: left;
+    padding-left: 41px;
+	height: 33px;
+    padding-top: 5px;
+}
+.acq_conv{
+    margin-top: 20px;
+    background-color: #ffe4c4;
+    padding: 5px 5px 15px 5px;
+    border-radius: 7px;
+}
+.tit_conv{
+	background-image: url(../img/ico_conv.png);
+	background-repeat: no-repeat;
+	background-position: right center;
+	background-size: 30px;
+}
+#contPurchases .sep{
+	display: block;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    height: 2px;
+	margin-top:15px;
+}
+#contPurchases .sep:last-child{
+	display:none;
+}
+.promoEuro b{
+	display: inline-block;
+    vertical-align: middle;
+    background-color: rgba(230, 155, 66, 0.5);
+    height: 27px;
+    line-height: 29px;
+    padding: 0 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    margin-right: 5px;
+    margin-bottom: 3px;
+}
+.promoEuro.inDett{
+	margin-top:-10px;
+	margin-bottom:20px;
+}
+.promoEuro.inDett b{
+    border-radius: 5px;
 }
